k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-dynamo-lab-svc
  namespace: python-dynamo-lab
spec:
  type: NodePort
  ports:
    - name: http
      targetPort: 8001
      port: 80
  selector:
    app: python-dynamo-lab-app
